fix: Markdown toolbar in dark mode #432

--- a/resources/sass/darkmode.scss
+++ b/resources/sass/darkmode.scss
@@ -196,6 +196,10 @@ hr {
   background-color: $card-bg !important;
 }
 
+.bg-body {
+  background-color: $body-bg !important;
+}
+
 .bg-white {
   background-color: $input-bg !important;
 }
@@ -220,7 +224,6 @@ hr {
 .border-start {
   border-left: 1px solid $border-bg !important;
 }
-
 
 ::-webkit-scrollbar {
   background-color: $border-bg;
